// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommentManager > generateCommentBody > snapshot tests (for refactoring safety) > should match snapshot: large PR with many files 1`] = `
"## ✅ PR Size Check Passed

### 📊 Summary

- Total additions: **200**
- Files analyzed: **5**
- Files excluded: **0**
- Binary files skipped: **0**

**All files are within size limits** ✅

### 📈 Top Large Files

| File | Size | Lines | Changes |
|------|------|-------|----------|
| src/file1.ts | 48.83 KB | 500 | +100/-20 |
| src/file2.ts | 29.30 KB | 300 | +50/-10 |
| src/file3.ts | 19.53 KB | 200 | +30/-5 |
| src/file4.ts | 9.77 KB | 100 | +15/-2 |
| src/file5.ts | 4.88 KB | 50 | +5/-1 |

---
*Generated by [PR Metrics Action](https://github.com/marketplace/actions/pr-metrics)*
<!-- pr-metrics-action -->"
`;

exports[`CommentManager > generateCommentBody > snapshot tests (for refactoring safety) > should match snapshot: no violations 1`] = `
"## ✅ PR Size Check Passed

### 📊 Summary

- Total additions: **100**
- Files analyzed: **0**
- Files excluded: **1**
- Binary files skipped: **1**

**All files are within size limits** ✅

---
*Generated by [PR Metrics Action](https://github.com/marketplace/actions/pr-metrics)*
<!-- pr-metrics-action -->"
`;

exports[`CommentManager > generateCommentBody > snapshot tests (for refactoring safety) > should match snapshot: with errors 1`] = `
"## ✅ PR Size Check Passed

### 📊 Summary

- Total additions: **50**
- Files analyzed: **0**
- Files excluded: **0**
- Binary files skipped: **0**
- Files with errors: **2** ⚠️

**All files are within size limits** ✅

### ⚠️ Analysis Errors

Some files could not be analyzed:

- src/error1.ts
- src/error2.ts

---
*Generated by [PR Metrics Action](https://github.com/marketplace/actions/pr-metrics)*
<!-- pr-metrics-action -->"
`;

exports[`CommentManager > generateCommentBody > snapshot tests (for refactoring safety) > should match snapshot: with violations 1`] = `
"## ⚠️ PR Size Check - Violations Found

### 📊 Summary

- Total additions: **1,500**
- Files analyzed: **2**
- Files excluded: **0**
- Binary files skipped: **0**

### 📊 Violations Summary

- **1** file(s) exceed size limit
- **1** file(s) exceed line limit
- **Total additions exceed limit**

### 🚫 Large Files Detected

| File | Size | Limit | Status |
|------|------|-------|--------|
| src/large.ts | 1.91 MB | 976.56 KB | 🚫 Critical |

### ⚠️ Files Exceed Line Limit

| File | Lines | Limit | Status |
|------|-------|-------|--------|
| src/large.ts | 2,000 | 1,000 | ⚠️ Warning |

### 📈 Top Large Files

| File | Size | Lines | Changes |
|------|------|-------|----------|
| src/large.ts | 1.91 MB | 2,000 | +1000/-0 |
| src/normal.ts | 4.88 KB | 100 | +50/-10 |

---
*Generated by [PR Metrics Action](https://github.com/marketplace/actions/pr-metrics)*
<!-- pr-metrics-action -->"
`;
